--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+@keyframes sine-wave {
+  0% {
+    transform: translateX(0) translateY(0);
+  }
+  25% {
+    transform: translateX(300px) translateY(-200px);
+  }
+  50% {
+    transform: translateX(1000px) translateY(0);
+  }
+  75% {
+    transform: translateX(600px) translateY(270px);
+  }
+  100% {
+    transform: translateX(-10px) translateY(0);
+  }
+}
+
+/* Wrapper for sine-wave movement */
+.sine-wave {
+  animation: sine-wave 25s infinite linear;
+  display: inline-block; /* Ensures smooth animation behavior */
+}
+
+@keyframes slow-flip {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+@keyframes slow-flip2 {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+/* Inner wrapper for flipping effect */
+.slow-flip {
+  animation: slow-flip 10s infinite linear;
+  display: inline-block;
+}
+
+.slow-flip2 {
+  animation: slow-flip2 5s infinite linear;
+  display: inline-block;
+}
